refactor: 리뷰 적용